# gah_final_submission

./: README.md
API_Server/: .dockerignore  .gitignore  API_ENDPOINTS.md  Dockerfile  README.md  main.py  migrate_db.py_bkp  pyproject.toml  requirements.txt
API_Server/app/: __init__.py.bak  api_models.py  api_namespaces.py  config.py  models.py  swagger_docs.py
API_Server/app/data/mock/: cibil_score.json
API_Server/app/routes/: auth.py  auth_swagger.py  crops.py  crops_swagger.py  farmer.py  fields.py  help_farmer.py  plants.py  transactions.py  weather.py
API_Server/app/services/: ai_service.py  firebase_service.py  weather_service.py
API_Server/instance/: agri_assist.db
API_Server/migrations/: env.py_BKP
Frontend/docs/: blueprint.md
Frontend/public/: audioWorkletProcessor.js
Frontend/src/ai/: dev.ts
Frontend/src/ai/flows/: categorize-and-respond.ts
Frontend/src/app/: globals.css  layout.tsx  page.tsx
Frontend/src/app/chat/: page.tsx
Frontend/src/app/profile/: page.tsx
Frontend/src/app/register/: page.tsx
Frontend/src/components/: logo.tsx
Frontend/src/components/ui/: AudioPlayer.tsx  CameraView.tsx
app_1_v4/: Dockerfile  main.py  requirements.txt
app_1_v4/farmai-agent/: agent.py
app_1_v4/farmai-agent/sub_agents/crop_recommendation/: agent.py
app_1_v4/farmai-agent/sub_agents/farmer_google/: agent.py
app_1_v4/farmai-agent/tools/: e_learning.py  farmer_crisis_relief.py  farmer_info.py  fetch_past_conversations.py  government_schemes.py  tools.py
