[project]
name = "agri-assist-backend"
version = "0.1.0"
description = "AI-powered agricultural assistance backend using Flask and Google AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask>=2.3.3",
    "Flask-SQLAlchemy>=3.0.5",
    "Flask-CORS>=4.0.0",
    "firebase-admin>=6.2.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "Pillow>=10.0.1",
    "requests>=2.31.0",
    "gunicorn>=21.2.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
